--- a/一定会卡死的网站/一定会卡死的网站.html
+++ b/一定会卡死的网站/一定会卡死的网站.html
@@ -99,7 +99,7 @@
 
 <body>
     <h1>一定会卡死的网站！试试就逝世！</h1>
-    <img src="/奇怪的思想/ff20cf833879a60d229cb7f3a5f88069.jpeg" class="dog">
+    <img src="/一定会卡死的网站/ff20cf833879a60d229cb7f3a5f88069.jpeg" class="dog">
     <button class="button1">熊猫头快晕了！点击帮助！</button>
     <div class="wrapper"></div>
     <button class="button2">这个迪厅太耀眼了！点击打断！</button>
