--- a/一定会卡死的网站/一定会卡死的网站.html
+++ b/一定会卡死的网站/一定会卡死的网站.html
@@ -216,6 +216,7 @@
         克劳斯·莫瑟爵士说过一句著名的话，教育需要花费钱，而无知也是一样。这句话看似简单，但其中的阴郁不禁让人深思。</div>
     <button class="button3">这篇文章太无聊了！点击暂停！</button>
     <script>
+        document.body.style.zoom = 0.67;
         let wrapper = document.querySelector('.wrapper')
         function random() {
             wrapper.style.background = `rgb(${Math.floor(Math.random() * 256)},${Math.floor(Math.random() * 256)},${Math.floor(Math.random() * 256)})`
